typestate-proc-macro/tests/fail/missing_initial_final_states.rs
use typestate_proc_macro::typestate;

#[typestate]
mod m {
    #[automata]
    struct S {}

    #[state]
    struct A {}
}

fn main() {}